--- a/package.xml
+++ b/package.xml
@@ -53,6 +53,14 @@
   <build_export_depend>urdf</build_export_depend>
   <exec_depend>urdf</exec_depend>
 
+  <build_depend>robot_state_publisher</build_depend>
+  <build_export_depend>robot_state_publisher</build_export_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+
+  <build_depend>xacro</build_depend>
+  <build_export_depend>xacro</build_export_depend>
+  <exec_depend>xacro</exec_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
